# quant-researcher

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.claude/rules/: backtest.md  data.md  holdings.md  ledger.md  models.md  research.md  screen.md  signals.md  testing.md  valuation.md
.github/workflows/: ci.yml  data-refresh.yml
config/: holdings.sample.csv  watchlist.sample.txt
docs/: architecture-subsystems.md  features.md  implementation-plan.md  realtime-signal-service-plan.md
quant_researcher/: __init__.py  cli.py  config.py  contract.py  db.py  universe.py
quant_researcher/backtest/: __init__.py  loader.py  runner.py
quant_researcher/data/: __init__.py  alphavantage.py  edgar.py  finra.py  fmp.py  freshness.py  refresh.py
quant_researcher/engine/: engine.py
quant_researcher/holdings/: __init__.py  csv.py  ibkr_flex.py  importer.py
quant_researcher/ledger/: __init__.py  engine.py  sectors.py
quant_researcher/models/: __init__.py  backtest.py  decisions.py  estimates.py  financials.py  holdings.py  insider.py  (+15 more)
scripts/: backfill_adj_close.py
tests/: test_alphavantage.py  test_backtest_cli.py  test_backtest_runner.py  test_bundler_technical.py  test_cli.py  test_cli_helpers.py  test_config.py  test_contract.py  test_dcf.py  test_e2e_chain.py  test_earnings.py  test_edgar.py  test_engine_fixes.py  test_expression.py  test_finra.py  test_fmp.py  test_freshness.py  test_holdings_importer.py  test_ibkr_flex.py  test_indicators.py  test_ledger.py  test_models.py  test_morningcall.py  test_peg_multiples.py  test_refresh.py  test_research.py  test_research_sector_classifier.py  test_reverse_dcf.py  test_scenario.py  test_scores.py  test_screen_engine.py  test_service_api.py  test_signal_cli.py  test_signal_engine.py  test_signal_factors.py  test_strategies.py  test_technical.py  test_universe.py  test_valuation_engine.py  test_valuation_helpers.py  (+2 more)
(+80 files in other folders)
