[project]
name = "quant-researcher"
version = "0.1.0"
description = "Auxiliary investing-research substrate for Claude Code orchestration."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
]

[project.scripts]
qr = "quant_researcher.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_researcher"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]

[tool.ruff.lint.isort]
known-first-party = ["quant_researcher", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
