[project]
name = "quant-researcher"
version = "0.1.0"
description = "Auxiliary investing-research substrate for Claude Code orchestration."
requires-python = ">=3.13"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "scipy>=1.11",
]

[project.scripts]
qr = "quant_researcher.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["quant_researcher"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
# Typer's documented pattern is `param: T = typer.Option(...)`; B008 is a
# false positive for it.
ignore = ["B008"]

[tool.ruff.lint.isort]
known-first-party = ["quant_researcher", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
